syntax = "proto3";

package sources;

option go_package = "./sources";

service SourcesService {
    rpc GetOrderInfo (SourcesRequest) returns (SourcesResponse);
}

message SourcesRequest {
    string order_id = 1;
    string executor_id = 2;
}

message ExecutorProfile {
    string id = 1;
    repeated string tags = 2;
    float rating = 3;
}

message PriceComponents {
    int32 base_coin_amount = 1;
    float coin_coeff = 2;
    int32 bonus_amount = 3;
}

message SourcesResponse {
    string order_id = 1;
    int32 final_coin_amount = 2;
    PriceComponents price_components = 3;
    ExecutorProfile executor_profile = 4;
    string zone_display_name = 5;
    bool used_executor_fallback = 6;
}
